--- a/src/components/sections/Packages/Packages.scss
+++ b/src/components/sections/Packages/Packages.scss
@@ -335,7 +335,7 @@
       padding-top: 40px;
 
       .individual_package_card {
-         background-image: url("../../../media/hatching.png");
+         background-image: url("../../../media/hatching.svg");
          background-size: contain;
          background-blend-mode: color-dodge;
          border-radius: 12px;
